[package]
name = "dirmux"
version = "0.1.0"
authors = ["Alaric <alaric@doublethink.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features=["derive"] } 
tokio = { version = "0.2", features=["full"] }
async-trait = "0.1"
structopt = "0.3"
dirs = "3.0"
termion = "1.0"
futures = "0.3"
git2 = "0.13"
lazy_static = "1.4"
