[package]
name = "dirmux"
version = "0.2.1"
authors = ["Alaric <alaric+cratesio@doublethink.co.uk>"]
edition = "2018"
description = "Directory and git repository command running program"
license = "MIT"
repository = "https://github.com/alaric/dirmux"
keywords = ["cli", "git", "directories", "repositories"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
serde_json = "^1.0"
serde = { version = "^1.0", features=["derive"] } 
tokio = { version = "^1.8", features=["full"] }
async-trait = "0.1"
structopt = "0.3"
dirs-next = "^2.0"
termion = "^4.0"
futures = "0.3"
git2 = "0.20"
lazy_static = "^1.4"
